Ability for user to add App complete, redirects to User home page which displays all apps in table.

--- a/src/main/resources/templates/User/addApp.html
+++ b/src/main/resources/templates/User/addApp.html
@@ -8,7 +8,7 @@
 <h1>Add Application Below</h1>
 <hr />
 
-<form method="post" th:object="${jobApp}">
+<form method="post" th:object="${app}">
 
     <div>
         <label th:for="${name}">Name</label>
