--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -5,7 +5,31 @@
 <body>
 <nav th:replace="fragments :: navigation"></nav>
 
-<h1>This will be User Job Tracker Homepage</h1>
+<h1>Application Tracker</h1>
+
+<table class="table">
+
+    <tr>
+        <th>Name</th>
+        <th>Company</th>
+        <th>Description</th>
+        <th>Location</th>
+        <th>Salary</th>
+
+    </tr>
+
+    <tr th:each="app : ${apps}">
+        <td th:text="${app.name}"></td>
+        <td th:text="${app.company}"></td>
+        <td th:text="${app.description}"></td>
+        <td th:text="${app.location}"></td>
+        <td th:text="${app.salary}"></td>
+        <!--  <td><a th:href="@{'/cheese/edit/' + ${cheese.id}}">Edit</a></td> -->
+    </tr>
+
+</table>
+
+<br />
 <nav>
     <a th:href="@{'/home/addApp/' + ${username}}">Add Application</a>
 </nav>
