User registers and is now saved in the database, if username is already taken, error message pops up.

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,6 +3,19 @@
 <head th:fragment = "head">
     <meta charset="UTF-8"/>
     <title th:text="${title}">Title</title>
+    <style>
+
+        .error {font-weight:700;
+                color: red;}
+
+        table {
+  border-collapse: collapse;
+}
+
+table, th, td {
+  border: 1px solid black;
+}
+    </style>
 
 </head>
 <body>
