Added Logout button and check that User is a user in DB when attempting to login.

--- a/src/main/resources/templates/Login/login.html
+++ b/src/main/resources/templates/Login/login.html
@@ -31,7 +31,9 @@
     </div>
 
     <br />
+    <span th:text="${verifyError}" class="error"></span>
 
+    <br />
     <input type="submit" value="Login"/>
 
 </form>
