--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -22,7 +22,8 @@ table, th, td {
 <nav th:fragment="navigation">
     <a href="/">Home</a> |
     <a href="/login">Login</a> |
-    <a href="/register">Register</a>
+    <a href="/register">Register</a> |
+    <a href="/">Logout</a>
 </nav>
 
 </body>
