--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -24,7 +24,7 @@
         <td th:text="${app.description}"></td>
         <td th:text="${app.location}"></td>
         <td th:text="${app.salary}"></td>
-        <!--  <td><a th:href="@{'/cheese/edit/' + ${cheese.id}}">Edit</a></td> -->
+        <td><a th:href="@{'/home/editApp/' + ${username} + '/' + ${app.appId}}">Edit</a></td>
     </tr>
 
 </table>
