Updated UserController and index template to sort and display blocked lists based on the phase of the application.

--- a/src/main/resources/templates/User/editApp.html
+++ b/src/main/resources/templates/User/editApp.html
@@ -17,7 +17,7 @@
     </div>
 
     <div>
-        <label th:for="${company}">Company</label>
+        <label th:for="${company}">Company/School</label>
         <input th:field="*{company}" th:value="${app.company}"/>
         <span th:errors="*{company}" class="error"></span>
     </div>
