--- a/src/main/resources/templates/User/addApp.html
+++ b/src/main/resources/templates/User/addApp.html
@@ -17,7 +17,7 @@
     </div>
 
     <div>
-        <label th:for="${company}">Company</label>
+        <label th:for="${company}">Company/School</label>
         <input th:field="*{company}" />
         <span th:errors="*{company}" class="error"></span>
     </div>
@@ -50,6 +50,7 @@
     <div >
         <label th:for="${salary}">Salary (/Year)</label>
         <select th:field="*{salary}" th:value="${app.salary}">
+        <option th:value="'Not Applicable'">Not Applicable</option>
         <option th:value="'Less than 20K'">Less than 20K</option>
         <option th:value="'20K-30K'">20K-30K</option>
         <option th:value="'30K-40K'">30K-40K</option>
