--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -56,7 +56,7 @@
 
 
 <nav>
-    <a th:href="@{'/home/addApp/' + ${username}}">Add App</a> |
+    <button><a th:href="@{'/home/addApp/' + ${username}}">Add App</a></button> |
     <input type="submit" value="Delete Selected App(s)" />
 </nav>
 </form>
