Added to home landing page and added address for user!

--- a/src/main/resources/templates/Login/index.html
+++ b/src/main/resources/templates/Login/index.html
@@ -6,7 +6,20 @@
 <body>
 <nav th:replace="fragments :: navigation"></nav>
 
-<h1>Soon to be functioning Home Page!</h1>
+<h1>Welcome to Carme, your job or school application tracker!</h1>
+
+<p><a href="/register">Register</a> or <a href="/login">Login</a> to organize your job or school search. Carme allows
+you to keep all your application in one, secure place with access to the
+actual job application with one click.</p>
+
+<p>Features include:</p>
+<ul>
+    <li>Storing crucial information (benefits, salary, location, etc.) about each application </li>
+    <li>Sorting ability to allow for further application organization</li>
+    <li>Quickly add, delete, or edit applications</li>
+    <li>Add your address to determine commute times for each application</li>
+    <li>Many more!</li>
+</ul>
 
 </body>
 </html>
