--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -17,7 +17,7 @@
 
 <form method="post">
 
-<table class="table"  th:each="applist : ${appLists}">
+<table class="table table-hover "  th:each="applist : ${appLists}">
 
 
 
