--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,6 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
 <head th:fragment = "head">
     <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css" />
     <title th:text="${title}">Title</title>
     <style>
 
@@ -16,15 +18,23 @@ table, th, td {
   border: 1px solid black;
 }
     </style>
-
 </head>
+
 <body>
-<nav th:fragment="navigation">
-    <a href="/">Home</a> |
-    <a href="/login">Login</a> |
-    <a href="/register">Register</a> |
-    <a href="/">Logout</a>
+<nav class="navbar navbar-inverse" th:fragment="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">Carme</a>
+        </div>
+
+        <ul class="nav navbar-nav navbar-right">
+            <li><a href="/register"><span class="glyphicon glyphicon-user"></span>Register</a></li>
+            <li><a href="/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li><a href="/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        </ul>
+    </div>
 </nav>
+
 
 </body>
 </html>
