Bootstrap clean up session.

--- a/src/main/resources/templates/Login/index.html
+++ b/src/main/resources/templates/Login/index.html
@@ -6,6 +6,7 @@
 <body>
 <nav th:replace="fragments :: navigation"></nav>
 
+<div class="col-sm-10 col-sm-offset-1">
 <h1>Welcome to Carme, your job or school application tracker!</h1>
 
 <p><a href="/register">Register</a> or <a href="/login">Login</a> to organize your job or school search. Carme allows
@@ -20,6 +21,7 @@ actual job application with one click.</p>
     <li>Add your address to determine commute times for each application</li>
     <li>Many more!</li>
 </ul>
+</div>
 
 </body>
 </html>
