--- a/src/main/resources/templates/Login/login.html
+++ b/src/main/resources/templates/Login/login.html
@@ -5,10 +5,15 @@
 <body>
 <nav th:replace="fragments :: navigation"></nav>
 
+<div class="col-sm-10 col-sm-offset-1">
+
 <h1>Welcome to Carme!</h1>
 <p>Please login to access your personal tracker or <a href="/register">Register here!</a></p>
-
+</div>
+<div class="col-sm-12">
 <hr />
+</div>
+
 <br />
 <form method="post" th:object="${user}" class="form-horizontal">
 
