--- a/src/main/resources/templates/User/addApp.html
+++ b/src/main/resources/templates/User/addApp.html
@@ -3,11 +3,14 @@
 <head th:replace="fragments :: head">
 </head>
 <body>
-<nav th:replace="fragments :: navigation"></nav>
+<nav th:replace="fragments :: user-navigation"></nav>
 
-<h1>Add Application</h1>
-<hr />
-
+<div class="col-sm-10 col-sm-offset-1">
+    <h1 >Add Application</h1>
+</div>
+<div class="col-sm-12">
+    <hr />
+</div>
 <form class="form-horizontal" method="post" th:object="${app}">
 
     <div th:fragment = "appForm">
