--- a/src/main/resources/templates/User/editApp.html
+++ b/src/main/resources/templates/User/editApp.html
@@ -3,10 +3,14 @@
 <head th:replace="fragments :: head">
 </head>
 <body>
-<nav th:replace="fragments :: navigation"></nav>
+<nav th:replace="fragments :: user-navigation"></nav>
 
-<h1>Edit Application</h1>
-<hr />
+<div class="col-sm-10 col-sm-offset-1">
+    <h1 >Edit Application</h1>
+</div>
+<div class="col-sm-12">
+    <hr />
+</div>
 
 <form method="post" th:object="${app}" class="form-horizontal">
 
