--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -35,6 +35,19 @@ table, th, td {
     </div>
 </nav>
 
+<nav class="navbar navbar-inverse" th:fragment="user-navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/">Carme</a>
+        </div>
+
+        <ul class="nav navbar-nav navbar-right">
+            <li><a th:href="@{'/home/'+${username}}"><span class="glyphicon glyphicon-home"></span>Home</a> </li>
+            <li><a href="/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        </ul>
+    </div>
+</nav>
+
 
 </body>
 </html>
