--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -42,7 +42,10 @@ table, th, td {
         </div>
 
         <ul class="nav navbar-nav navbar-right">
-            <li><a th:href="@{'/home/'+${username}}"><span class="glyphicon glyphicon-home"></span>Home</a> </li>
+            <li><a th:href="@{'/home/'+${username}}"><span class="glyphicon glyphicon-home">
+                </span>Home</a> </li>
+            <li><a th:href="@{'/home/addApp/' + ${username}}">
+                <span class="glyphicon glyphicon-plus"></span>Add App</a></li>
             <li><a href="/"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
         </ul>
     </div>
