Simple styling and content edits.

--- a/src/main/resources/templates/Login/index.html
+++ b/src/main/resources/templates/Login/index.html
@@ -19,11 +19,11 @@ actual job application with one click.</p>
 
 <p>Features include:</p>
 <ul>
-    <li>Storing crucial information (benefits, salary, location, etc.) about each application </li>
-    <li>Sorting ability to allow for further application organization</li>
+    <li>Store crucial information (benefits, salary, location, etc.) about each application </li>
+    <li>Easily sort applications to allow for further organization</li>
     <li>Quickly add, delete, or edit applications</li>
-    <li>Add your address to determine commute times for each application</li>
-    <li>Many more!</li>
+    <li>Add your address to determine commute times</li>
+    <li>And many more!</li>
 </ul>
 </div>
 
