--- a/src/main/resources/templates/User/editApp.html
+++ b/src/main/resources/templates/User/editApp.html
@@ -24,7 +24,7 @@
     <input type="hidden" th:value="${app.appId}" name="appId" />
 
     <div class="col-sm-3 col-sm-offset-3">
-    <input type="submit" value="Edit Application" class="form-control"/>
+    <input type="submit" value="Save Application" class="form-control"/>
     </div>
 
 </form>
