--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -3,21 +3,11 @@
 <head th:fragment = "head">
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css?family=Bitter:400,700|East+Sea+Dokdo&amp;display=swap" rel="stylesheet"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"/>
+    <link th:href="@{/css/styles.css}" rel="stylesheet" />
     <title th:text="${title}">Title</title>
-    <style>
 
-        .error {font-weight:700;
-                color: red;}
-
-        table {
-  border-collapse: collapse;
-}
-
-table, th, td {
-  border: 1px solid black;
-}
-    </style>
 </head>
 
 <body>
