Changed name, and several other minor details...see todos for next steps!

--- a/src/main/resources/templates/Login/login.html
+++ b/src/main/resources/templates/Login/login.html
@@ -7,7 +7,7 @@
 
 <div class="col-sm-10 col-sm-offset-1">
 
-<h1>Welcome to Carme!</h1>
+<h1>Welcome to Appeaz!</h1>
 <p>Please login to access your personal tracker or <a href="/register">Register here!</a></p>
 </div>
 <div class="col-sm-12">
