--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -2,10 +2,13 @@
                 font-family: 'East Sea Dokdo', cursive;
                 font-size: 2.5em;
         }
-        .error {font-weight:700;
+
+
+
+.error {font-weight:700;
                 color: red;}
 
-        table {
+table {
   border-collapse: collapse;
 }
 
@@ -13,6 +16,12 @@ table, th, td {
   border: 3px solid black;
 }
 
+
+
 h1 {
 font-family: 'Bitter', serif;
+}
+
+th {
+    background-color: #2ea0f2;
 }
