--- a/src/main/resources/templates/Login/index.html
+++ b/src/main/resources/templates/Login/index.html
@@ -7,13 +7,13 @@
 <nav th:replace="fragments :: navigation"></nav>
 
 <div class="col-sm-10 col-sm-offset-1">
-<h1>Welcome to Carme, your job or school application tracker!</h1>
+<h1>Welcome to Appeaz, your job or school application tracker!</h1>
 
     <div class="col-sm-12">
         <hr />
     </div>
 
-<p><a href="/register">Register</a> or <a href="/login">Login</a> to organize your job or school search. Carme allows
+<p><a href="/register">Register</a> or <a href="/login">Login</a> to organize your job or school search. Appeaz allows
 you to keep all your application in one, secure place with access to the
 actual job application with one click.</p>
 
