--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -14,24 +14,30 @@
 </div>
 
 
-<div class="col-sm-10 col-sm-offset-1" th:unless="${appLists} and ${appLists.size()}">
+<div class="col-sm-10 col-sm-offset-1" th:unless="${appLists} and ${appLists[0].size()}
+     or ${appLists[1].size()}
+     or ${appLists[2].size()}
+     or ${appLists[3].size()}
+     or ${appLists[4].size()}">
 <p>No applications! Please start by adding an application using the Add App button above.</p>
 </div>
 
 
 <form method="post" class="form-horizontal">
     <div class="col-sm-10 col-sm-offset-1">
-<table class="table table-hover "  th:each="applist : ${appLists}">
+<table class="table table-hover"  th:each="applist : ${appLists}">
 
 
 
     <h4 th:unless="${applist.isEmpty()}" th:text="${applist[0].phase}">Table Header</h4>
 
     <!--TODO: ATTEMPT TO SORT BY CLICKING ON HEADERS...JS? OR NEW HANDLERS?-->
+    <!--TODO: ATTEMPT TO COLOR CODE TABLES BY PHASE-->
 
     <tr th:unless="${applist.isEmpty()}">
         <th>Position</th>
         <th>Company/School</th>
+        <th>Date</th>
         <th>Description</th>
         <th>Location</th>
         <th>Salary</th>
@@ -49,6 +55,7 @@
     <tr th:each="app : ${applist}">
         <td th:text="${app.name}"></td>
         <td th:text="${app.company}"></td>
+        <td th:text="${app.date}"></td>
         <td th:text="${app.description}"></td>
         <td th:text="${app.location}"></td>
         <td th:text="${app.salary}"></td>
@@ -77,7 +84,11 @@
 
 <hr />
     <div class="col-sm-8 col-sm-offset-2"
-         th:if="${appLists} and ${appLists.size()}">
+         th:if="${appLists} and ${appLists[0].size()}
+                or ${appLists[1].size()}
+                or ${appLists[2].size()}
+                or ${appLists[3].size()}
+                or ${appLists[4].size()}">
 
     <input type="submit" value="Delete Selected App(s)" class="form-control"/>
 
