--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,7 +14,7 @@
 <nav class="navbar navbar-inverse" th:fragment="navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Carme</a>
+            <a class="navbar-brand" href="/">Appeaz</a>
         </div>
 
         <ul class="nav navbar-nav navbar-right">
@@ -28,7 +28,7 @@
 <nav class="navbar navbar-inverse" th:fragment="user-navigation">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="/">Carme</a>
+            <a class="navbar-brand" href="/">Appeaz</a>
         </div>
 
         <ul class="nav navbar-nav navbar-right">
