Added footer, some CSS modifications to buttons and text.

--- a/src/main/resources/templates/Login/register.html
+++ b/src/main/resources/templates/Login/register.html
@@ -77,8 +77,8 @@
 
 
     <br />
-    <div class="col-sm-3 col-sm-offset-3">
-    <input type="submit" value="Register" class="form-control"/>
+    <div class="col-sm-2 col-sm-offset-2">
+    <input type="submit" value="Register" class="login-button form-control"/>
     </div>
 
 </form>
@@ -86,4 +86,7 @@
 
 
 </body>
+
+<footer th:replace="fragments :: footer"></footer>
+
 </html>
