--- a/src/main/resources/templates/User/editApp.html
+++ b/src/main/resources/templates/User/editApp.html
@@ -23,8 +23,8 @@
 
     <input type="hidden" th:value="${app.appId}" name="appId" />
 
-    <div class="col-sm-3 col-sm-offset-3">
-    <input type="submit" value="Save Application" class="form-control"/>
+    <div class="col-sm-2 col-sm-offset-2">
+    <input type="submit" value="Save Application" class="login-button form-control"/>
     </div>
 
 </form>
@@ -32,4 +32,6 @@
 
 
 </body>
+<footer th:replace="fragments :: footer"></footer>
+
 </html>
