--- a/src/main/resources/templates/User/index.html
+++ b/src/main/resources/templates/User/index.html
@@ -90,7 +90,7 @@
                 or ${appLists[3].size()}
                 or ${appLists[4].size()}">
 
-    <input type="submit" value="Delete Selected App(s)" class="form-control"/>
+    <input type="submit" value="Delete Selected App(s)" class="login-button form-control"/>
 
     </div>
 </form>
@@ -101,4 +101,5 @@
 
 
 </body>
+<footer th:replace="fragments :: footer"></footer>
 </html>
