--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -43,4 +43,11 @@
 
 
 </body>
+
+<footer th:fragment="footer">
+    <div class="footer ">
+    <p class="col-sm-12 text-center">&copy;Appeaz</p>
+    </div>
+</footer>
+
 </html>
