--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -3,7 +3,10 @@
                 font-size: 2.5em;
         }
 
-
+ footer {
+    font-family: "East Sea Dokdo", cursive;
+    font-size: 1.25em;
+ }
 
 .error {font-weight:700;
                 color: red;}
@@ -17,11 +20,20 @@ table, th, td {
 }
 
 
-
 h1 {
 font-family: 'Bitter', serif;
 }
 
 th {
-    background-color: #2ea0f2;
+
+}
+
+/*CSS for Landing page */
+.landing-page {
+    font-size: 1.25em;
+}
+
+.login-button {
+    color: white;
+    background-color: black;
 }
