--- a/src/main/resources/templates/Login/index.html
+++ b/src/main/resources/templates/Login/index.html
@@ -6,15 +6,16 @@
 <body>
 <nav th:replace="fragments :: navigation"></nav>
 
-<div class="col-sm-10 col-sm-offset-1">
-<h1>Welcome to Appeaz, your job or school application tracker!</h1>
+<div class="col-sm-12 ">
+<h1 class="text-center">Welcome to Appeaz, your job or school application tracker!</h1>
 
     <div class="col-sm-12">
         <hr />
     </div>
 
+    <div class="landing-page col-sm-10 col-sm-offset-1">
 <p><a href="/register">Register</a> or <a href="/login">Login</a> to organize your job or school search. Appeaz allows
-you to keep all your application in one, secure place with access to the
+you to keep all of your applications in one, secure place with access to the
 actual job application with one click.</p>
 
 <p>Features include:</p>
@@ -26,6 +27,8 @@ actual job application with one click.</p>
     <li>And many more!</li>
 </ul>
 </div>
+</div>
 
 </body>
+<footer th:replace="fragments :: footer"></footer>
 </html>
