--- a/src/main/resources/templates/Login/login.html
+++ b/src/main/resources/templates/Login/login.html
@@ -38,8 +38,8 @@
     <span th:text="${verifyError}" class="error"></span>
 
     <br />
-    <div class="col-sm-3 col-sm-offset-3">
-    <input type="submit" value="Login" class="form-control" />
+    <div class="col-sm-2 col-sm-offset-2">
+    <input type="submit" value="Login" class="login-button form-control" />
     </div>
 
 </form>
@@ -47,4 +47,5 @@
 
 
 </body>
+<footer th:replace="fragments :: footer"></footer>
 </html>
