--- a/src/main/resources/templates/User/addApp.html
+++ b/src/main/resources/templates/User/addApp.html
@@ -121,8 +121,8 @@
 
     <br />
 
-    <div class="col-sm-3 col-sm-offset-3">
-    <input type="submit" value="Add Application" class="form-control"/>
+    <div class="col-sm-2 col-sm-offset-2">
+    <input type="submit" value="Add Application" class="login-button form-control"/>
     </div>
 
 </form>
@@ -131,4 +131,6 @@
 
 
 </body>
+<footer th:replace="fragments :: footer"></footer>
+
 </html>
