--- a/src/main/resources/templates/Login/register.html
+++ b/src/main/resources/templates/Login/register.html
@@ -14,7 +14,20 @@
 <hr />
 </div>
 
+
 <form method="post" th:object="${user}" class="form-horizontal">
+
+    <div class="form-group">
+        <label th:for="${username}" class="control-label col-sm-2">Username:</label>
+        <div class="col-sm-4">
+            <input th:field="*{username}" class="form-control"/>
+            <span th:errors="*{username}" class="error"></span>
+            <span th:text="${verifyError}" class="error"></span>
+
+        </div>
+    </div>
+
+    <div th:fragment="userInfo">
 
     <div class="form-group">
         <label th:for="${firstName}" class="control-label col-sm-2">First Name:</label>
@@ -29,16 +42,6 @@
         <div class="col-sm-4">
         <input th:field="*{lastName}" class="form-control"/>
         <span th:errors="*{lastName}" class="error"></span>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <label th:for="${username}" class="control-label col-sm-2">Username:</label>
-        <div class="col-sm-4">
-        <input th:field="*{username}" class="form-control"/>
-        <span th:errors="*{username}" class="error"></span>
-            <span th:text="${verifyError}" class="error"></span>
-
         </div>
     </div>
 
@@ -58,6 +61,9 @@
         </div>
     </div>
 
+    </div>
+
+
     <div class="form-group">
         <label th:for="${password}" class="control-label col-sm-2">Password:</label>
         <div class="col-sm-4">
@@ -66,6 +72,9 @@
 
         </div>
     </div>
+
+
+
     <div class="form-group">
         <label th:for="${verify}" class="control-label col-sm-2">Verify Password:</label>
         <div class="col-sm-4">
@@ -81,7 +90,9 @@
     <input type="submit" value="Register" class="login-button form-control"/>
     </div>
 
+
 </form>
+
 
 
 
